# bullistic-candy-machine

./: Anchor.toml  Goki.toml  README.md  package.json  rust-toolchain.toml
.github/workflows/: publish-packages.yml
create-example/: README.md  config.json  keypair.json
create-example/assets/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  collection.json
keys/: README.md  localnet.json
keys/mainnet/: README.md
keys/testnet/: program-keypair.json
programs/bullistic-candy-machine/: Cargo.toml
programs/bullistic-sugar/: .gitignore  Cargo.toml
programs/bullistic-sugar/script/: sugar-cli-test.sh  sugar-create-candy.sh
programs/bullistic-sugar/src/: cache.rs  candy_machine.rs  common.rs  errors.rs  main.rs  pdas.rs  program_errors.rs
programs/bullistic-sugar/src/clear_merkle_allowlist/: process.rs
programs/bullistic-sugar/src/collections/: remove.rs  set.rs
programs/bullistic-sugar/src/config/: data.rs
programs/bullistic-sugar/src/create_config/: process.rs
programs/bullistic-sugar/src/deploy/: collection.rs  config_lines.rs  initialize.rs
programs/bullistic-sugar/src/launch/: process.rs
programs/bullistic-sugar/src/merkle_allowlist/: errors.rs  process.rs  utils.rs
programs/bullistic-sugar/src/mint/: process.rs
programs/bullistic-sugar/src/reveal/: process.rs
programs/bullistic-sugar/src/show/: process.rs
programs/bullistic-sugar/src/update/: process.rs
programs/bullistic-sugar/src/upload/: process.rs
programs/bullistic-sugar/src/validate/: errors.rs  parser.rs  process.rs
programs/bullistic-sugar/src/verify/: process.rs
programs/bullistic-sugar/src/withdraw/: process.rs
programs/formfn-candy-machine/: Cargo.toml
programs/formfn-candy-machine/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/formfn-candy-machine/src/processor/: add_config_lines.rs  initialize.rs  merkle_allowlist.rs  update.rs  withdraw.rs
programs/formfn-candy-machine/src/processor/collection/: remove_collection.rs  set_collection.rs
programs/formfn-candy-machine/src/processor/freeze/: remove_freeze.rs  set_freeze.rs  thaw_nft.rs  unlock_funds.rs
programs/formfn-candy-machine/tests/: buy_limit.rs  creator_authority.rs  freeze.rs  merkle_allowlist.rs  mint.rs  mint_many.rs  mint_phases.rs  parse_config_lines.rs  price_discounts.rs  sequential_mint_order.rs  spl_token_allowlist.rs
programs/formfn-candy-machine/tests/core/: helpers.rs  master_edition_manager.rs
programs/formfn-candy-machine/tests/utils/: candy_config_builder.rs  candy_manager.rs  constants.rs  helper_transactions.rs  helpers.rs  merkle_test_utils.rs  mod.rs
programs/formfn-sugar/: Cargo.toml
scripts/: deploy-program.sh  setup-idl.sh  test-local.sh
scripts/anchor-configs/: Anchor-dev.toml  Anchor-prod.toml  Anchor-test.toml
src/: index.ts
src/scripts/: constants.ts  downshiftCreateAssetsIndex.ts  estimateProofSizes.ts  generateMerkleAllowlistConfig.ts  generateSplAllowlistConfig.ts  lintProgramIdl.ts  modifyProgramIdl.ts  printCandyMachineState.ts  setCreateAssetIndexes.ts  updateCreateConfigTimes.ts  (+2 more)
(+155 files in other folders)
