[package]
name = "bullistic-sugar-cli"
version = "0.6.3"
edition = "2021"
description = "Bullistic fork of the Metaplex Sugar CLI, a command line tool for creating and managing Metaplex Candy Machines."
license = "Apache-2.0"

[[bin]]
name = "bullistic_sugar"
path = "src/main.rs"

[dependencies]
anchor-client = "0.26.0"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
anyhow = "1.0.58"
async-trait = "0.1.57"
borsh = "0.9.3"
bs58 = "0.4.0"
bundlr-sdk = { version = "0.3.0", default-features = false, features = ["solana"] }
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive", "cargo"] }
console = "0.15.0"
ctrlc = "3.2.2"
data-encoding = "2.3.2"
dateparser = "0.1.6"
dialoguer = "0.10.1"
dirs = "4.0.0"
bullistic-candy-machine = { path = "../bullistic-candy-machine" }
futures = "0.3.21"
glob = "0.3.0"
indexmap = { version = "1.9.1", features = ["serde"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
ini = "1.3.0"
lazy_static = "1.4.0"
mpl-token-metadata = "1.8.3"
num_cpus = "1.13.1"
phf = { version = "0.10", features = ["macros"] }
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.5.6"
retry = "1.3.0"
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
ring = "0.16.20"
rust-s3 = "0.31.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.24"
sha2 = "0.10.2"
shellexpand = "2.1.0"
solana-account-decoder = "1.14.15"
solana-client = "1.14.15"
# NOTE: I disabled this for now and changed the code which relies on it because of a dependency conflict.
# solana-transaction-crawler = "0.0.7"
solana-logger = "1.14.15"
solana-program = "1.14.15"
solana-transaction-status = "1.14.15"
spl-associated-token-account = "1.1.2"
spl-token = "3.5.0"
structopt = "0.3.26"
thiserror = "1.0.31"
tokio = "1.14.1"
tracing = { version = "0.1.35", features = ["log"] }
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
url = "2.2.2"