[package]
name = "formfn-candy-machine"
version = "0.0.1"
description = "Formfunction fork of Metaplex Candy Machine v2 program."
authors = ["Formfunction Developers"]
repository = "https://github.com/formfunction-hq/formfn-candy-machine"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "formfn_candy_machine"

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []
use-test-anti-bot-authority = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
arrayref = "0.3.6"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
mpl-token-metadata = { version = "1.8.3", features = ["no-entrypoint"] }
solana-program = "1.14.15"
solana-security-txt = "1.0.2"
spl-associated-token-account = { version = "1.1.2", features = [
  "no-entrypoint",
] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
anchor-client = "0.26.0"
borsh = "~0.9.3"
chrono = "0.4.19"
console = "0.15.5"
serde = "1.0.144"
serde_json = "1.0.85"
solana-program-test = "1.14.15"
solana-sdk = "1.14.15"
tarpc = "0.29.0"
